--- a/index.html
+++ b/index.html
@@ -3,45 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-    <style>
-        body { margin: 0; background: transparent; overflow: hidden; }
-        .aplayer .aplayer-list ol li .aplayer-list-cur {
-            width: 2px !important; height: 22px !important; top: 5px !important; background: #ff7675 !important;
-        }
-        .aplayer .aplayer-list ol li.aplayer-list-light { background: #e9e9e9 !important; }
-        .aplayer .aplayer-list ol { padding-bottom: 60px !important; }
-        .aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-title { font-weight: bold; }
-        .aplayer-list { max-height: 90px !important; }
-        .aplayer { border-radius: 8px !important; box-shadow: none !important; border: 1px solid #eee !important; }
-    </style>
+    <style>body { margin: 0; background: transparent; }</style>
 </head>
 <body>
     <div id="aplayer"></div>
     <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
     <script>
-        const USER = "yuangejianli"; 
-        const REPO = "my-music";     
-        async function init() {
-            const res = await fetch(`https://api.github.com/repos/${USER}/${REPO}/contents/music?t=${new Date().getTime()}`);
-            const data = await res.json();
-            const playlist = data.filter(f => f.name.toLowerCase().endsWith('.mp3')).map(f => {
-                const title = f.name.replace(/\.[^/.]+$/, "");
-                return {
-                    name: title.split(' - ')[1] || title,
-                    artist: title.split(' - ')[0] || "Unknown",
-                    url: f.download_url,
-                    cover: `cover/${title}.jpg`
-                };
-            });
-            window.ap = new APlayer({
-                container: document.getElementById('aplayer'),
-                listFolded: false,
-                listMaxHeight: '90px',
-                theme: '#ff7675',
-                audio: playlist
-            });
-        }
-        init();
+        // 这个版本不自动扫文件夹，我们手动写死两首歌测试
+        const ap = new APlayer({
+            container: document.getElementById('aplayer'),
+            listFolded: false,
+            audio: [
+                {
+                    name: '测试歌曲 1',
+                    artist: '测试歌手',
+                    url: 'music/FictionJunction - 沙尘的彼方.mp3', // 👈 确保这里的文件名和你music文件夹里的一模一样！
+                    cover: 'cover/FictionJunction - 沙尘的彼方.jpg'
+                }
+            ]
+        });
     </script>
 </body>
 </html>
