--- a/index.html
+++ b/index.html
@@ -3,33 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+    <!-- 引入色彩提取插件 -->
+    <script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
     <style>
-        body { margin: 0; background: transparent; overflow: hidden; }
-        .aplayer .aplayer-list ol li .aplayer-list-cur { width: 2px !important; height: 22px !important; top: 5px !important; background: #ff7675 !important; }
+        body { margin: 0; background: transparent; }
+        
+        /* 1. 变回直角 */
+        .aplayer { 
+            border-radius: 0 !important; 
+            box-shadow: none !important; 
+            border: 1px solid #eee !important; 
+        }
+
+        /* 2. 竖条宽度 */
+        .aplayer .aplayer-list ol li .aplayer-list-cur {
+            width: 2px !important;
+        }
+
+        /* 3. 解锁高度：随 Notion 框无限伸缩 */
+        .aplayer-list { 
+            max-height: none !important; 
+        }
+
         .aplayer .aplayer-list ol li.aplayer-list-light { background: #e9e9e9 !important; }
-        .aplayer .aplayer-list ol { padding-bottom: 60px !important; }
-        .aplayer-list { max-height: 90px !important; }
-        .aplayer { border-radius: 8px !important; box-shadow: none !important; border: 1px solid #eee !important; }
     </style>
 </head>
 <body>
     <div id="aplayer"></div>
     <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
     <script>
+        // 你的歌曲清单 (以后加歌只需要填这 4 项，不用管颜色)
+        const audioList = [
+            { name: '沙尘的彼方', artist: 'FictionJunction', url: 'music/FictionJunction - 沙尘的彼方.mp3', cover: 'cover/FictionJunction - 沙尘的彼方.jpg' },
+            { name: 'Everytime you kissed me', artist: 'FictionJunction', url: 'music/FictionJunction - Everytime you kissed me.mp3', cover: 'cover/FictionJunction - Everytime you kissed me.jpg' },
+            { name: 'My long forgotten cloistered sleep', artist: 'FictionJunction', url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3', cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg' },
+            { name: '花守之丘', artist: 'FictionJunction', url: 'music/FictionJunction - 花守之丘.mp3', cover: 'cover/FictionJunction - 花守之丘.jpg' },
+            { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' },
+            { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
+            { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' }
+        ];
+
+        // 初始化播放器
         const ap = new APlayer({
             container: document.getElementById('aplayer'),
             listFolded: false,
-            listMaxHeight: '90px',
-            theme: '#ff7675',
-            audio: [
-                { name: '沙尘的彼方', artist: 'FictionJunction', url: 'music/FictionJunction - 沙尘的彼方.mp3', cover: 'cover/FictionJunction - 沙尘的彼方.jpg' },
-                { name: 'Everytime you kissed me', artist: 'FictionJunction', url: 'music/FictionJunction - Everytime you kissed me.mp3', cover: 'cover/FictionJunction - Everytime you kissed me.jpg' },
-                { name: 'My long forgotten cloistered sleep', artist: 'FictionJunction', url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3', cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg' },
-                { name: '花守之丘', artist: 'FictionJunction', url: 'music/FictionJunction - 花守之丘.mp3', cover: 'cover/FictionJunction - 花守之丘.jpg' },
-                { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' },
-                { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
-                { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' }
-            ]
+            audio: audioList
+        });
+
+        // --- 变色龙逻辑：自动提取封面颜色 ---
+        const colorThief = new ColorThief();
+        const setTheme = (index) => {
+            const img = new Image();
+            img.crossOrigin = 'Anonymous'; // 允许跨域提取图片颜色
+            img.src = ap.list.audios[index].cover;
+            
+            img.onload = () => {
+                const rgb = colorThief.getColor(img); // 提取主色调
+                const color = `rgb(${rgb[0]}, ${rgb[1]}, ${rgb[2]})`;
+                ap.theme(color, index); // 把提取到的颜色应用到当前曲目
+            };
+        };
+
+        // 页面刚加载时，给列表所有歌曲提取一遍颜色
+        audioList.forEach((_, i) => setTheme(i));
+
+        // 每次切换歌曲时，确保主题色即时更新
+        ap.on('listswitch', (data) => {
+            const rgb = colorThief.getColor(document.querySelector('.aplayer-pic img'));
+            ap.theme(`rgb(${rgb[0]}, ${rgb[1]}, ${rgb[2]})`);
         });
     </script>
 </body>
