--- a/index.html
+++ b/index.html
@@ -1,80 +1,183 @@
-<script>
-  const audioList = [
-    { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' }
-    { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
-    { name: 'Everytime you kissed me', artist: 'FictionJunction', url: 'music/FictionJunction - Everytime you kissed me.mp3', cover: 'cover/FictionJunction - Everytime you kissed me.jpg' },
-    { name: '沙尘的彼方', artist: 'FictionJunction', url: 'music/FictionJunction - 沙尘的彼方.mp3', cover: 'cover/FictionJunction - 沙尘的彼方.jpg' },
-    { name: 'My long forgotten cloistered sleep', artist: 'FictionJunction', url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3', cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg' },
-    { name: '花守之丘', artist: 'FictionJunction', url: 'music/FictionJunction - 花守之丘.mp3', cover: 'cover/FictionJunction - 花守之丘.jpg' },
-    { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' },
-  ];
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
 
-  const ap = new APlayer({
-    container: document.getElementById('aplayer'),
-    listFolded: false,
-    audio: audioList,
-    theme: '#e9e9e9'
-  });
+  <!-- APlayer 样式 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 
-  const colorThief = new ColorThief();
-  const DEFAULT_THEME = '#e9e9e9';
+  <!-- ColorThief 取色库 -->
+  <script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
 
-  function scrollActiveIntoView() {
-    const active = document.querySelector('.aplayer-list li.aplayer-list-light');
-    if (!active) return;
-    const list = document.querySelector('.aplayer .aplayer-list ol');
-    if (!list) return;
-    active.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
-  }
+  <style>
+    body {
+      margin: 0;
+      background: transparent;
+    }
 
-  // ✅ 稳定取色：带重试 + 失败兜底
-  let themeTimer = null;
-  function updateThemeSafe(retry = 0) {
-    const index = ap.list.index;
-    const imgUrl = audioList[index]?.cover;
-    if (!imgUrl) return;
+    .aplayer {
+      border-radius: 0 !important;
+      box-shadow: none !important;
+      border: 1px solid #eee !important;
+    }
 
-    // 防抖：切歌很快时避免疯狂取色
-    clearTimeout(themeTimer);
-    themeTimer = setTimeout(() => {
-      const img = new Image();
-      img.crossOrigin = "Anonymous";
-      img.decoding = "async";
-      img.referrerPolicy = "no-referrer"; // Notion/某些CDN下更稳一点
+    .aplayer .aplayer-list ol li .aplayer-list-cur {
+      width: 2px !important;
+    }
 
-      img.onload = () => {
-        try {
-          const color = colorThief.getColor(img);
-          const themeColor = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
-          ap.theme(themeColor, index);
-        } catch (e) {
-          // 有时图片已加载但 canvas/取色失败，重试几次再兜底
-          if (retry < 4) {
-            setTimeout(() => updateThemeSafe(retry + 1), 250);
-          } else {
-            ap.theme(DEFAULT_THEME, index);
+    .aplayer .aplayer-list ol li.aplayer-list-light {
+      background: #e9e9e9 !important;
+    }
+
+    /* ✅ 播放列表可滚动（高度按需改） */
+    .aplayer .aplayer-list ol {
+      max-height: 140px;
+      overflow-y: auto;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="aplayer"></div>
+
+  <!-- APlayer 主脚本 -->
+  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+
+  <script>
+    /* =========================
+       音乐列表（已修正顺序 & 语法）
+       ========================= */
+    const audioList = [
+      {
+        name: 'Her Silence',
+        artist: '何真真',
+        url: 'music/何真真 - Her Silence.mp3',
+        cover: 'cover/何真真 - Her Silence.jpg'
+      },
+      {
+        name: 'Hurricanes',
+        artist: 'Dido',
+        url: 'music/Dido - Hurricanes.mp3',
+        cover: 'cover/Dido - Hurricanes.jpg'
+      },
+      {
+        name: 'Everytime you kissed me',
+        artist: 'FictionJunction',
+        url: 'music/FictionJunction - Everytime you kissed me.mp3',
+        cover: 'cover/FictionJunction - Everytime you kissed me.jpg'
+      },
+      {
+        name: '沙尘的彼方',
+        artist: 'FictionJunction',
+        url: 'music/FictionJunction - 沙尘的彼方.mp3',
+        cover: 'cover/FictionJunction - 沙尘的彼方.jpg'
+      },
+      {
+        name: 'My long forgotten cloistered sleep',
+        artist: 'FictionJunction',
+        url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3',
+        cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg'
+      },
+      {
+        name: '花守之丘',
+        artist: 'FictionJunction',
+        url: 'music/FictionJunction - 花守之丘.mp3',
+        cover: 'cover/FictionJunction - 花守之丘.jpg'
+      },
+      {
+        name: 'Rewrite The Stars',
+        artist: 'Zendaya',
+        url: 'music/Zendaya - Rewrite The Stars.mp3',
+        cover: 'cover/Zendaya - Rewrite The Stars.jpg'
+      }
+    ];
+
+    /* =========================
+       APlayer 初始化
+       ========================= */
+    const ap = new APlayer({
+      container: document.getElementById('aplayer'),
+      listFolded: false,
+      audio: audioList,
+      theme: '#e9e9e9'
+    });
+
+    const colorThief = new ColorThief();
+    const DEFAULT_THEME = '#e9e9e9';
+
+    /* =========================
+       自动滚动到当前播放项
+       ========================= */
+    function scrollActiveIntoView() {
+      const active = document.querySelector('.aplayer-list li.aplayer-list-light');
+      if (!active) return;
+
+      const list = document.querySelector('.aplayer .aplayer-list ol');
+      if (!list) return;
+
+      active.scrollIntoView({
+        behavior: 'smooth',
+        block: 'nearest'
+      });
+    }
+
+    /* =========================
+       稳定变色龙主题（Notion 适配）
+       ========================= */
+    let themeTimer = null;
+
+    function updateThemeSafe(retry = 0) {
+      const index = ap.list.index;
+      const imgUrl = audioList[index]?.cover;
+      if (!imgUrl) return;
+
+      clearTimeout(themeTimer);
+      themeTimer = setTimeout(() => {
+        const img = new Image();
+        img.crossOrigin = 'Anonymous';
+        img.decoding = 'async';
+        img.referrerPolicy = 'no-referrer';
+
+        img.onload = () => {
+          try {
+            const color = colorThief.getColor(img);
+            const themeColor = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
+            ap.theme(themeColor, index);
+          } catch (e) {
+            retry < 4
+              ? setTimeout(() => updateThemeSafe(retry + 1), 250)
+              : ap.theme(DEFAULT_THEME, index);
           }
-        }
-      };
+        };
 
-      img.onerror = () => {
-        if (retry < 4) {
-          setTimeout(() => updateThemeSafe(retry + 1), 250);
-        } else {
-          ap.theme(DEFAULT_THEME, index);
-        }
-      };
+        img.onerror = () => {
+          retry < 4
+            ? setTimeout(() => updateThemeSafe(retry + 1), 250)
+            : ap.theme(DEFAULT_THEME, index);
+        };
 
-      // ✅ 给封面加一点点 cache-bust，避免 Notion embed 下偶发“取到旧图/不触发onload”
-      const bust = `cb=${Date.now()}_${index}_${retry}`;
-      img.src = imgUrl.includes('?') ? `${imgUrl}&${bust}` : `${imgUrl}?${bust}`;
-    }, 60);
-  }
+        const bust = `cb=${Date.now()}_${index}_${retry}`;
+        img.src = imgUrl.includes('?') ? `${imgUrl}&${bust}` : `${imgUrl}?${bust}`;
+      }, 60);
+    }
 
-  // 切歌：滚动 + 变色
-  ap.on('listswitch', () => {
-    scrollActiveIntoView();
-    updateThemeSafe(0);
-  });
+    /* =========================
+       事件绑定
+       ========================= */
+    ap.on('listswitch', () => {
+      scrollActiveIntoView();
+      updateThemeSafe(0);
+    });
 
-  // 有些时候 Notion 首次渲染时 lis
+    ap.on('canplay', () => updateThemeSafe(0));
+    ap.on('play', () => updateThemeSafe(0));
+
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        scrollActiveIntoView();
+        updateThemeSafe(0);
+      }, 400);
+    });
+  </script>
+</body>
+</html>
