--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- APlayer 样式 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 
-  <!-- ColorThief 取色库 -->
+  <!-- ColorThief -->
   <script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
 
   <style>
@@ -29,13 +29,19 @@
       background: #e9e9e9 !important;
     }
 
-    /* ✅ 让列表区域成为滚动容器（高度按需改：110/130/160 都行） */
-    .aplayer .aplayer-list{
-      max-height: 140px;
-      overflow-y: auto;
+    /* =========================
+       ✅ 核心：不锁死高度的伪滚动
+       ========================= */
+    .aplayer .aplayer-list {
+      max-height: 120px;        /* 窄时生效，可随意改 */
+      min-height: 60px;
+      overflow: hidden;        /* 必须隐藏真实滚动 */
+      position: relative;
     }
-    .aplayer .aplayer-list ol{
-      max-height: none;
+
+    .aplayer .aplayer-list ol {
+      transition: transform 0.35s ease;
+      will-change: transform;
     }
   </style>
 </head>
@@ -43,61 +49,23 @@
 <body>
   <div id="aplayer"></div>
 
-  <!-- APlayer 主脚本 -->
+  <!-- APlayer -->
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
 
   <script>
     /* =========================
-       音乐列表（已修正顺序 & 语法）
+       音乐列表
        ========================= */
     const audioList = [
-      {
-        name: 'Her Silence',
-        artist: '何真真',
-        url: 'music/何真真 - Her Silence.mp3',
-        cover: 'cover/何真真 - Her Silence.jpg'
-      },
-      {
-        name: 'Hurricanes',
-        artist: 'Dido',
-        url: 'music/Dido - Hurricanes.mp3',
-        cover: 'cover/Dido - Hurricanes.jpg'
-      },
-      {
-        name: 'Everytime you kissed me',
-        artist: 'FictionJunction',
-        url: 'music/FictionJunction - Everytime you kissed me.mp3',
-        cover: 'cover/FictionJunction - Everytime you kissed me.jpg'
-      },
-      {
-        name: '沙尘的彼方',
-        artist: 'FictionJunction',
-        url: 'music/FictionJunction - 沙尘的彼方.mp3',
-        cover: 'cover/FictionJunction - 沙尘的彼方.jpg'
-      },
-      {
-        name: 'My long forgotten cloistered sleep',
-        artist: 'FictionJunction',
-        url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3',
-        cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg'
-      },
-      {
-        name: '花守之丘',
-        artist: 'FictionJunction',
-        url: 'music/FictionJunction - 花守之丘.mp3',
-        cover: 'cover/FictionJunction - 花守之丘.jpg'
-      },
-      {
-        name: 'Rewrite The Stars',
-        artist: 'Zendaya',
-        url: 'music/Zendaya - Rewrite The Stars.mp3',
-        cover: 'cover/Zendaya - Rewrite The Stars.jpg'
-      }
+      { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' },
+      { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
+      { name: 'Everytime you kissed me', artist: 'FictionJunction', url: 'music/FictionJunction - Everytime you kissed me.mp3', cover: 'cover/FictionJunction - Everytime you kissed me.jpg' },
+      { name: '沙尘的彼方', artist: 'FictionJunction', url: 'music/FictionJunction - 沙尘的彼方.mp3', cover: 'cover/FictionJunction - 沙尘的彼方.jpg' },
+      { name: 'My long forgotten cloistered sleep', artist: 'FictionJunction', url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3', cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg' },
+      { name: '花守之丘', artist: 'FictionJunction', url: 'music/FictionJunction - 花守之丘.mp3', cover: 'cover/FictionJunction - 花守之丘.jpg' },
+      { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' }
     ];
 
-    /* =========================
-       APlayer 初始化
-       ========================= */
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
       listFolded: false,
@@ -105,67 +73,36 @@
       theme: '#e9e9e9'
     });
 
-    const colorThief = new ColorThief();
-    const DEFAULT_THEME = '#e9e9e9';
-
     /* =========================
-       ✅ 强力自动滚动（Notion/窄高度稳定）
+       ✅ 不锁死高度的伪滚动逻辑
        ========================= */
-    function getScrollContainer() {
-      // 优先找真正有滚动条的元素
-      const list = document.querySelector('.aplayer .aplayer-list');
-      if (list && list.scrollHeight > list.clientHeight) return list;
+    function translateListIfNeeded() {
+      const wrap = document.querySelector('.aplayer .aplayer-list');
+      const list = document.querySelector('.aplayer .aplayer-list ol');
+      const active = document.querySelector('.aplayer li.aplayer-list-light');
+      if (!wrap || !list || !active) return;
 
-      const ol = document.querySelector('.aplayer .aplayer-list ol');
-      if (ol && ol.scrollHeight > ol.clientHeight) return ol;
-
-      return list || ol;
-    }
-
-    function scrollActiveIntoViewStrong(mode = 'center') {
-      const active = document.querySelector('.aplayer .aplayer-list li.aplayer-list-light');
-      const container = getScrollContainer();
-      if (!active || !container) return false;
-
-      const cRect = container.getBoundingClientRect();
-      const aRect = active.getBoundingClientRect();
-
-      // active 相对 container 的位置（用 rect 算，避免 offsetTop 参照错）
-      const topInContainer = (aRect.top - cRect.top) + container.scrollTop;
-      const bottomInContainer = topInContainer + aRect.height;
-
-      const viewTop = container.scrollTop;
-      const viewBottom = viewTop + container.clientHeight;
-
-      // 已经完全可见就不用滚
-      if (topInContainer >= viewTop && bottomInContainer <= viewBottom) return true;
-
-      let target;
-      if (mode === 'nearest') {
-        // 只滚到刚好可见
-        target = topInContainer < viewTop
-          ? topInContainer
-          : (bottomInContainer - container.clientHeight);
-      } else {
-        // 滚到中间（体验最好）
-        target = topInContainer - (container.clientHeight / 2) + (aRect.height / 2);
+      // 如果列表完全显示得下，就不需要任何平移
+      if (list.scrollHeight <= wrap.clientHeight + 2) {
+        list.style.transform = 'translateY(0)';
+        return;
       }
 
-      container.scrollTo({ top: target, behavior: 'smooth' });
-      return true;
-    }
+      const itemHeight = active.offsetHeight;
+      const index = ap.list.index;
 
-    // 多帧重试：确保高亮更新后一定滚
-    function ensureScrollActive(retries = 6) {
-      const ok = scrollActiveIntoViewStrong('center');
-      if (ok) return;
-      if (retries <= 0) return;
-      requestAnimationFrame(() => ensureScrollActive(retries - 1));
+      // 当前播放项尽量出现在第 2 行
+      const visibleIndex = 1;
+      const offset = Math.max(0, (index - visibleIndex) * itemHeight);
+
+      list.style.transform = `translateY(${-offset}px)`;
     }
 
     /* =========================
-       ✅ 稳定变色龙主题（Notion 适配）
+       变色龙（稳定版）
        ========================= */
+    const colorThief = new ColorThief();
+    const DEFAULT_THEME = '#e9e9e9';
     let themeTimer = null;
 
     function updateThemeSafe(retry = 0) {
@@ -177,30 +114,26 @@
       themeTimer = setTimeout(() => {
         const img = new Image();
         img.crossOrigin = 'Anonymous';
-        img.decoding = 'async';
         img.referrerPolicy = 'no-referrer';
 
         img.onload = () => {
           try {
             const color = colorThief.getColor(img);
-            const themeColor = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
-            ap.theme(themeColor, index);
-          } catch (e) {
-            retry < 4
+            ap.theme(`rgb(${color[0]}, ${color[1]}, ${color[2]})`, index);
+          } catch {
+            retry < 3
               ? setTimeout(() => updateThemeSafe(retry + 1), 250)
               : ap.theme(DEFAULT_THEME, index);
           }
         };
 
         img.onerror = () => {
-          retry < 4
+          retry < 3
             ? setTimeout(() => updateThemeSafe(retry + 1), 250)
             : ap.theme(DEFAULT_THEME, index);
         };
 
-        // 给封面加 cache-bust，避免 Notion embed 下偶发不触发 onload
-        const bust = `cb=${Date.now()}_${index}_${retry}`;
-        img.src = imgUrl.includes('?') ? `${imgUrl}&${bust}` : `${imgUrl}?${bust}`;
+        img.src = imgUrl + '?cb=' + Date.now();
       }, 60);
     }
 
@@ -208,19 +141,15 @@
        事件绑定
        ========================= */
     ap.on('listswitch', () => {
-      ensureScrollActive(6);
+      requestAnimationFrame(translateListIfNeeded);
       updateThemeSafe(0);
     });
 
-    // 有些情况下 Notion 首次渲染 listswitch 不触发，用这些补齐
-    ap.on('canplay', () => updateThemeSafe(0));
-    ap.on('play', () => updateThemeSafe(0));
-
     window.addEventListener('load', () => {
       setTimeout(() => {
-        ensureScrollActive(6);
+        translateListIfNeeded();
         updateThemeSafe(0);
-      }, 500);
+      }, 400);
     });
   </script>
 </body>
