--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <!-- APlayer 样式 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 
-  <!-- ColorThief 取色库 -->
+  <!-- ColorThief（变色龙） -->
   <script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
 
   <style>
-    body { margin: 0; background: transparent; }
+    body {
+      margin: 0;
+      background: transparent;
+    }
 
     .aplayer {
       border-radius: 0 !important;
@@ -18,28 +21,53 @@
       border: 1px solid #eee !important;
     }
 
-    .aplayer .aplayer-list ol li .aplayer-list-cur { width: 2px !important; }
-    .aplayer .aplayer-list ol li.aplayer-list-light { background: #e9e9e9 !important; }
-
-    /* ✅ 关键：让“列表区域”自己滚动，别动 ol */
-    .aplayer .aplayer-list{
-      overflow-y: auto !important;
-      /* 高度由 JS 自动写入，避免你手算不准 */
+    .aplayer .aplayer-list ol li .aplayer-list-cur {
+      width: 2px !important;
     }
 
-    /* 可选：滚动条更干净一点（不影响功能） */
-    .aplayer .aplayer-list::-webkit-scrollbar { width: 6px; }
-    .aplayer .aplayer-list::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.15); border-radius: 10px; }
-    .aplayer .aplayer-list::-webkit-scrollbar-track { background: transparent; }
+    .aplayer .aplayer-list ol li.aplayer-list-light {
+      background: #e9e9e9 !important;
+    }
+
+    /* =========================
+       ✅ 正常版列表：可拉高 + 可滚动
+       ========================= */
+    .aplayer .aplayer-list {
+      overflow-y: auto !important;
+    }
+
+    /* =========================
+       ✅ 隐藏右侧滚动条（但保留滚动）
+       ========================= */
+
+    /* Chrome / Edge / Safari */
+    .aplayer .aplayer-list::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
+
+    /* Firefox */
+    .aplayer .aplayer-list {
+      scrollbar-width: none;
+    }
+
+    /* IE / 旧 Edge */
+    .aplayer .aplayer-list {
+      -ms-overflow-style: none;
+    }
   </style>
 </head>
 
 <body>
   <div id="aplayer"></div>
 
+  <!-- APlayer -->
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
 
   <script>
+    /* =========================
+       音乐列表
+       ========================= */
     const audioList = [
       { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' },
       { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
@@ -50,6 +78,9 @@
       { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' }
     ];
 
+    /* =========================
+       APlayer 初始化
+       ========================= */
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
       listFolded: false,
@@ -58,34 +89,7 @@
     });
 
     /* =========================
-       ✅ 把列表高度锁到“完整 3 首”
-       - 用真实 li 高度算，不用你手调 px
-       - 保证裁在横线之间，不破坏边框完整性
-       ========================= */
-    function lockListHeightToN(n = 3) {
-      const list = document.querySelector('.aplayer .aplayer-list');
-      const li = document.querySelector('.aplayer .aplayer-list li');
-      if (!list || !li) return;
-
-      const h = li.getBoundingClientRect().height;
-
-      // 有些环境里 li 高度会是小数，取整避免 1px 裂缝
-      const target = Math.round(h * n);
-
-      list.style.height = target + 'px';
-    }
-
-    // 初次渲染后再算（APlayer 会异步渲染列表）
-    function initLockHeight() {
-      lockListHeightToN(3);
-
-      // Notion/字体加载可能会改高度，再补一次
-      setTimeout(() => lockListHeightToN(3), 300);
-      setTimeout(() => lockListHeightToN(3), 800);
-    }
-
-    /* =========================
-       变色龙（稳定版）
+       变色龙（稳定版，勿动）
        ========================= */
     const colorThief = new ColorThief();
     const DEFAULT_THEME = '#e9e9e9';
@@ -107,14 +111,16 @@
             const c = colorThief.getColor(img);
             ap.theme(`rgb(${c[0]}, ${c[1]}, ${c[2]})`, index);
           } catch (e) {
-            retry < 3 ? setTimeout(() => updateThemeSafe(retry + 1), 250)
-                      : ap.theme(DEFAULT_THEME, index);
+            retry < 3
+              ? setTimeout(() => updateThemeSafe(retry + 1), 250)
+              : ap.theme(DEFAULT_THEME, index);
           }
         };
 
         img.onerror = () => {
-          retry < 3 ? setTimeout(() => updateThemeSafe(retry + 1), 250)
-                    : ap.theme(DEFAULT_THEME, index);
+          retry < 3
+            ? setTimeout(() => updateThemeSafe(retry + 1), 250)
+            : ap.theme(DEFAULT_THEME, index);
         };
 
         img.src = imgUrl + (imgUrl.includes('?') ? '&' : '?') + 'cb=' + Date.now();
@@ -124,15 +130,8 @@
     ap.on('listswitch', () => updateThemeSafe(0));
 
     window.addEventListener('load', () => {
-      // 等 APlayer 把 DOM 插完
-      setTimeout(() => {
-        initLockHeight();
-        updateThemeSafe(0);
-      }, 350);
+      setTimeout(() => updateThemeSafe(0), 300);
     });
-
-    // 可选：窗口尺寸变化时重新锁一下（Notion 里偶尔有重排）
-    window.addEventListener('resize', () => lockListHeightToN(3));
   </script>
 </body>
 </html>
